--- a/HTML/docs.html
+++ b/HTML/docs.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Docs</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="icon" href="/icons/gear.png">
+    <link rel="stylesheet" href="/main.css">
+    <!-- <link rel="icon" href="/icons/gear.png"> -->
 </head>
 <body>
     <header class="Header">
         <figure class="logo">
-            <img src="/img/Meta -logos_black.png" alt=" meta-logo" title="logo" width="120px" height="120px" loading = "lazy">
+            <img src="/assest/logo/aroma -logos_black.png" alt=" meta-logo" title="logo" width="150px" height="150px" loading ="lazy">
         </figure>
         <nav class="Nav">
           <ul class="nav_list">
@@ -19,10 +19,9 @@
               <li> <a  href="/HTML/docs.html">Docs </a></li>
               <li> <a  href="/HTML/about.html">About</a></li>
               <ul class="navsocial_list">
-                <li> <a href="https://github.com/anshultamrakar?tab=repositories"> <img src="/icons/icons8-github-64.png" alt = "github" width="30px" height="30px" title="Github"></a> </li>
-                <li> <a href=" https://www.linkedin.com/in/anshul-tamrakar-51ba38166/ "><img src="/icons/icons8-twitter-48.png" alt="twitter" title="twitter" width="30px" height="30px"></a> </li>
-                <li> <a href=" https://www.linkedin.com/in/anshul-tamrakar-51ba38166/"><img src="/icons/icons8-linkedin-circled-48.png" alt="linkedin" title="linkedin" width="30px" height="30px"></a> </li>
-                <li> <a href="mailto:anshultamrakar487@gmail.com"><img src="/icons/icons8-circled-envelope-48.png" alt="email" title="Email" width="30px" height="30px"></a> </li>
+                <li> <a href="https://github.com/anshultamrakar?tab=repositories"> <img src="/assest/social-icon/icons8-github-30.png" alt = "github" width="30px" height="30px" title="Github"></a> </li>
+                <li> <a href=" https://www.linkedin.com/in/anshul-tamrakar-51ba38166/ "><img src="/assest/social-icon/icons8-twitter-48.png" alt="twitter" title="twitter" width="30px" height="30px"></a> </li>
+                <li> <a href=" https://www.linkedin.com/in/anshul-tamrakar-51ba38166/"><img src="/assest/social-icon/icons8-linkedin-48.png" alt="linkedin" title="linkedin" width="30px" height="30px"></a> </li>
               </ul>
             
           </ul>
